# zygisk-memdump

./: README.md  build.gradle  gradle.properties  module.gradle
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  dumpso.cpp  dumpso.h  gumhook.cpp  gumhook.h  main.cpp
module/src/main/cpp/SoFixer/: ElfReader.cpp  ElfRebuilder.cpp  ObElfReader.h  macros.h
module/src/main/cpp/include/: frida-gum.h  log.h  logcat.h
module/src/main/cpp/tool/: CMakeLists.txt  logcat.cpp  main.cpp
template/magisk_module/: config  service.sh
